--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: webview_all
 description: a webview widget with full-platform support, based on the existing packages
-version: 0.4.5
+version: 0.4.6
 homepage: https://github.com/moluopro/webview_all
 
 platforms:
@@ -18,13 +18,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter: ^4.8.0
+  webview_flutter:
   flutter_web_plugins:
     sdk: flutter
-  webview_flutter_web: ^0.2.3+2
-  webview_flutter_platform_interface: ^2.4.0
-  webf: ^0.16.2
-  abutil: ^0.1.2
+  webview_flutter_web:
+  webview_flutter_platform_interface:
+  webf:
+  abutil:
 
 dev_dependencies:
   flutter_test:
