Reove_Desktop_Supoort

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: webview_all
 description: a webview widget with full-platform support, based on the existing packages
-version: 0.4.8
+version: 0.4.9
 homepage: https://github.com/moluopro/webview_all
 
 platforms:
@@ -21,7 +21,7 @@ dependencies:
 
   webview_flutter_web: ^0.2.3+4
   webview_flutter_platform_interface: ^2.10.0
-  webf: ^0.16.3+1
+  # webf: ^0.16.3+1
   abutil: ^0.1.2
 
 dev_dependencies:
